# secret-letters-bot

./: .gitignore  Makefile  README.md  pyproject.toml
assets/: settings.json
engine/: bot.py  config.py  logger.py  messages.py  sql.py  utils.py
